manual and auto cluster init

--- a/Funkční řešení/docker-compose.yml
+++ b/Funkční řešení/docker-compose.yml
@@ -198,6 +198,20 @@ services:
     ports:
       - 27130:27017
     restart: always
+  
+  cluster-init:
+    build: 
+      context: mongodb-build
+    container_name: cluster-init
+    depends_on:
+      - configsvr01
+      - shard01-a
+      - shard02-a
+      - shard03-a
+      - router01
+    volumes:
+      - ./scripts:/scripts
+    entrypoint: ["bash", "/scripts/cluster-init.sh"]
 
 volumes:
   mongodb_cluster_router01_db:
