--- a/Funkční řešení/docker-compose.yml
+++ b/Funkční řešení/docker-compose.yml
@@ -198,9 +198,9 @@ services:
     ports:
       - 27130:27017
     restart: always
-  
+
   # cluster-init:
-  #   build: 
+  #   build:
   #     context: mongodb-build
   #   container_name: cluster-init
   #   depends_on:
@@ -211,8 +211,8 @@ services:
   #     - router01
   #   volumes:
   #     - ./scripts:/scripts
-  #   entrypoint: ["bash", "/scripts/manual-cluster-init.sh"]
-
+  #     - ./data/cluster-state:/data
+  #   command: [ "bash", "/scripts/cluster-init.sh" ]
 
 volumes:
   mongodb_cluster_router01_db:
